<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.youz.android.activity.PostShare">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="400dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp" >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <View
                android:id="@+id/v_back"
                android:background="#000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/img_back"
                android:layout_alignBottom="@+id/img_back" />

            <LinearLayout
                android:id="@+id/ll_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignBottom="@+id/img_back"
                android:layout_alignTop="@+id/img_back">

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="8dp"
                        android:paddingBottom="4dp"
                        android:paddingTop="4dp"
                        android:text="2016/02/22"
                        android:textColor="@color/colorGrayLight"
                        android:textSize="@dimen/text_small_size" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="My life is more interesting than yours"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_intro_normal_size"
                    android:ellipsize="end" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ll_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ic_location_white"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:padding="4dp" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="California"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_small_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_nb_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50"
                            android:textColor="@color/colorGrayLight"
                            android:textSize="@dimen/text_small_size" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="4dp"
                            android:src="@drawable/ic_comment_white" />

                        <TextView
                            android:id="@+id/tv_nb_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="250"
                            android:textColor="@color/colorGrayLight"
                            android:textSize="@dimen/text_small_size" />

                        <com.like.LikeButton
                            android:id="@+id/lb_fav"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="8dp"
                            app:icon_type="heart"
                            app:circle_start_color="@color/colorRed"
                            app:like_drawable="@drawable/ic_like_white"
                            app:unlike_drawable="@drawable/ic_fav_white"
                            app:dots_primary_color="@color/colorRed"
                            app:dots_secondary_color="@color/colorAccent"
                            app:circle_end_color="@color/colorAccent"
                            app:icon_size="16dp"
                            app:liked="false"
                            app:anim_scale_factor="2"
                            app:is_enabled="true"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:gravity="center"
        android:padding="16dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/title_activity_share"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/text_medium_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/share_facebook"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/back_rounded_facebook"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_twitter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/share_twitter"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/back_rounded_twiiter"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/dialog_cancel"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/back_rounded_disable"
            android:textSize="16dp" />

    </LinearLayout>
</RelativeLayout>
